<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">M-News</string>
    <string name="unknown">Unknown</string>

    <!--DrawerLayout-->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="drawer_home_action">Home</string>
    <string name="drawer_favorite_action">Favorite</string>
    <string name="drawer_subscription_action">Subscription</string>
    <string name="drawer_setting_action">Setting</string>
    <string name="drawer_account_binding_action">Account Binding</string>
    <string name="drawer_profile_id_anonymous">Anonymous</string>

    <!--Setting Activity-->
    <string name="app_label_setting">@string/drawer_setting_action</string>
    <string name="action">Action</string>
    <string name="auto_refresh_title">Auto Refresh</string>
    <string name="auto_refresh_summary">First open App Refresh News</string>
    <string name="double_to_top_title">Double Clicked Toolbar to Top</string>
    <string name="double_to_top_summary">Double clicked toolbar scroll to top</string>

    <string name="view">View</string>
    <string name="use_card_view_title">Use Card View</string>
    <string name="swipe_back_title">Swipe Back</string>
    <string name="toast_you_need_restart">Changes will apply after restarting the application</string>

    <string name="item_disable_animation">Disable list animations</string>
    <string name="item_disable_animation_desc">Recommend old devices to disable it</string>

    <string name="about_title">About</string>
    <string name="author_Weibo_title">Weibo</string>
    <string name="author_Weibo_summary" translatable="false">\@编代码的西瓜</string>
    <string name="author_Weibo_url" translatable="false">http://weibo.com/hksharemax</string>
    <string name="author_Twitter_title" translatable="false">Twitter</string>
    <string name="author_Twitter_summary" translatable="false">\@Saeratom</string>
    <string name="author_Twitter_url" translatable="false">https://twitter.com/</string>
    <string name="github_title" translatable="false">Github</string>
    <string name="github_url" translatable="false">https://github.com/SharerMax/M-News</string>
    <string name="open_source_license">Open Source License</string>
    <string name="app_version">Version</string>

    <!--AccountBindActivity-->
    <string name="account_bind">Account Bind</string>
    <string name="weibo_auto_item">Sina Weibo</string>

    <!--EditWeiboActivity-->
    <string name="label_editWeiboActivity">Sina Weibo</string>
    <string name="weibo_cancle">Cancel</string>
    <string name="weibo_send">Send</string>
    <string name="weibo_edit_helper">Note:Not more than 140 letters</string>
    <string name="weibo_edit_error">Error:Has more than 140 letters</string>
    <string name="send_success">Has Send</string>
    <string name="send_fail">Send Fail</string>

    <!--SubscriptionActivity-->
    <string name="label_subscription_activity">Subscription</string>
    <string name="title_startup" translatable="false">StartUp</string>
    <string name="title_csdn_geek" translatable="false">CSDN GEEK</string>
    <string name="title_hacker_news" translatable="false">Hacker News</string>

    <!--FavoriteActivity-->
    <string name="fav_activity_title">@string/drawer_favorite_action</string>
    <string name="fav_activity_undo">UNDO</string>

    <!--ItemDialog-->
    <string name="itemdialog_negative_button">Cancel</string>
    <string name="itemdialog_title">Action</string>
    <string name="itemdialog_share_action">Share to Weibo</string>
    <string name="itemdialog_favorite_action">Favorite</string>
    <string-array name="itemdialog_actions">
        <item>@string/itemdialog_favorite_action</item>
        <item>@string/itemdialog_share_action</item>
    </string-array>
    <string name="itemdialog_fav_exist">This item had been exists</string>
    <string name="itemdialog_fav_success">Favorite successfully</string>

    <!--NewsFragment-->
    <string name="newsfragment_retry">Retry</string>

    <!--NewsViewerActivity-->
    <string name="nva_action_refresh">Refresh</string>
    <string name="nva_action_goback">GoBack</string>
    <string name="nva_fab_action_share">Share</string>
    <string name="nva_fab_action_fav">Favorite</string>
    <string name="nva_fav_success_message">Favorite successfully</string>
    <string name="nva_fav_exist_message">This item has been exists</string>
    <string name="nva_fav_fail_message">Favorite ERROR!!!</string>
    <!--Error Message-->
    <string name="net_error">Maybe your internet is not good....</string>

</resources>
