<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/action">
        <CheckBoxPreference
            android:key="auto_refresh"
            android:title="@string/auto_refresh_title"
            android:summary="@string/auto_refresh_summary"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="double_to_top"
            android:title="@string/double_to_top_title"
            android:summary="@string/double_to_top_summary"
            android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/view">
        <SwitchPreference
            android:key="use_card_view"
            android:title="@string/use_card_view_title"
            android:defaultValue="true"/>
        <SwitchPreference
            android:key="swipe_to_back"
            android:title="@string/swipe_back_title"
            android:defaultValue="true"/>
    </PreferenceCategory>
</PreferenceScreen>
