<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_menu_home"
            android:icon="@drawable/ic_home_white"
            android:title="@string/drawer_home_action"/>
        <item
            android:id="@+id/drawer_menu_favorite"
            android:icon="@drawable/ic_action_favorite"
            android:title="@string/drawer_favorite_action"/>
        <item
            android:id="@+id/drawer_menu_subscription"
            android:icon="@drawable/ic_subscription_white"
            android:title="@string/drawer_subscription_action"/>
        <item
            android:id="@+id/drawer_menu_setting"
            android:icon="@drawable/ic_settings_white"
            android:title="@string/drawer_setting_action"/>
        <item
            android:id="@+id/drawer_menu_account"
            android:icon="@drawable/ic_account_binding"
            android:title="@string/drawer_account_binding_action"/>
    </group>

</menu>